--- a/Tutorial-Customization.ipynb
+++ b/Tutorial-Customization.ipynb
@@ -36,7 +36,7 @@
     "1. A passthrough FST that transduces the input text as is ($\\Sigma *$ - a set of all possible strings over the alphabet $\\Sigma$). This FST should have the longest distance/weight w.r.t. all the other FSTs\n",
     "2. An FST per class of interest. FST for a class can import from other FSTs. However the resultant FST when exported will be independent of FSTs it imports from.\n",
     "\n",
-    "Grammars in Speech hints are composed on the fly. Grammars can be standalone references to the FST or consist of FSTs in context with sentences. Grammars are denoted by \\\\$\\<FSTNAME\\>. For English the following [grammars](https://gitlab-master.nvidia.com/riva-tn-itn-devel/speech-hints-grammars) are supported\n",
+    "Grammars in Speech hints are composed on the fly. Grammars can be standalone references to the FST or consist of FSTs in context with sentences. Grammars are denoted by \\\\$\\<FSTNAME\\>. For English the following [grammars](https://github.com/nvidia-riva/speech-hints) are supported\n",
     "1. \\$OOV_NUMERIC_SEQUENCE\n",
     "2. \\$OOV_ALPHA_SEQUENCE\n",
     "3. \\$OOV_ALPHA_NUMERIC_SEQUENCE\n",
@@ -185,7 +185,7 @@
    "metadata": {},
    "source": [
     "## Grammar for handling alphabet sequence\n",
-    "Let's say we need to build a grammar to support conversion of alphabet sequences to a single word ('i b m' -> 'ibm').  (For a more detailed implementation that refer https://gitlab-master.nvidia.com/riva-tn-itn-devel/speech-hints-grammars/-/blob/main/en/oov_class_alpha_sequence.py"
+    "Let's say we need to build a grammar to support conversion of alphabet sequences to a single word ('i b m' -> 'ibm').  (For a more detailed implementation refer https://github.com/nvidia-riva/speech-hints/blob/main/en/oov_class_alpha_sequence.py"
    ]
   },
   {
